input value html css

--- a/index.html
+++ b/index.html
@@ -55,7 +55,25 @@
                    </div>
                 </form>
             </div>
-            <div class="output"></div>
+            <div class="output">
+                <div class="outout-div">
+                <div>
+                    <h1 class="form-title">Your Info</h1>
+                 </div>
+                 <div>
+                    <p id="output-name" class="output-value"></p>
+                    <p id="output-last-name" class="output-value" ></p>
+                    <p id="output-email" class="output-value" ></p>
+                    <p id="output-number" class="output-value" ></p>
+                    <p id="output-country" class="output-value" ></p>
+                    <p id="ebout-me" class="output-value">
+                    </p>
+                 </div>
+                 <div class="button-output">
+                    <button  class="sub-btn">Done</button>
+                   </div>
+            </div>
+        </div>
         </div>
     </section>
 </body>
